--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,28 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
-<h1>Login</h1>
-<form action="/login" method="post">
-    <!-- CSRF токен для защиты от атак -->
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-
+<h1>Registration</h1>
+<form action="/register" method="post">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> <!-- CSRF токен -->
     <div>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
     </div>
     <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+    </div>
+    <div>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit">Login</button>
+    <button type="submit">Register</button>
 </form>
-
-<!-- Сообщение об ошибке, если аутентификация не удалась -->
 <div th:if="${error}">
-    <p th:text="${error}">Invalid credentials</p>
+    <p th:text="${error}">Error message</p>
 </div>
 </body>
 </html>
