--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,27 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-<h1>Login</h1>
-<form action="/login" method="post">
-    <!-- CSRF токен для защиты от атак -->
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-</form>
+<div class="content-wrap">
+    <div class="main-content center-container">
+        <h1>Login</h1>
 
-<!-- Сообщение об ошибке, если аутентификация не удалась -->
-<div th:if="${error}">
-    <p th:text="${error}">Invalid credentials</p>
+        <form action="/login" method="post" class="login-form">
+            <!-- CSRF токен для защиты от атак -->
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="submit-button">Login</button>
+        </form>
+
+        <!-- Сообщение об ошибке, если аутентификация не удалась -->
+        <div th:if="${error}" class="error-message">
+            <p th:text="${error}">Invalid credentials</p>
+        </div>
+
+        <!-- Кнопка для перехода на страницу регистрации -->
+        <div class="register-link">
+            <p>Don't have an account?</p>
+            <a href="/register" class="back-button">Register</a>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Movie Catalog</p>
+    </footer>
 </div>
+
 </body>
 </html>
